--- a/src/app/customer/customer-detail/customer-detail.component.html
+++ b/src/app/customer/customer-detail/customer-detail.component.html
@@ -296,13 +296,7 @@
                     <ng-container matColumnDef="problemreported1">
                         <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported
                             </th>
-                        <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported1}}
-                        </td>
-                    </ng-container>
-                    <ng-container matColumnDef="problemreported2">
-                        <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported
-                            2</th>
-                        <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported2}}
+                        <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported}}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="docketno">
