--- a/src/app/dashboard/interaction-list-by-team/interaction-list-by-team.component.html
+++ b/src/app/dashboard/interaction-list-by-team/interaction-list-by-team.component.html
@@ -56,7 +56,7 @@
       </ng-container>
       <ng-container matColumnDef="problemreported1">
           <th class="table-column-200" mat-header-cell *matHeaderCellDef> Problem Reported</th>
-          <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported1}}
+          <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported}}
           </td>
       </ng-container>
       <ng-container matColumnDef="docketno">
