--- a/src/app/calendar/add-calendar/add-calendar.component.html
+++ b/src/app/calendar/add-calendar/add-calendar.component.html
@@ -1,1 +1,50 @@
-<p>add-calendar works!</p>
+<div class="page-header-main">
+    <div class="row align-items-center justify-content-between">
+        <div class="col-md-auto col-sm-auto col">
+            <div class="content-header">
+                <h1>UPdate Calendar</h1>
+            </div>
+        </div>
+    </div>
+</div>
+
+<form class="" [formGroup]="calendarForm">
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            <mat-label>Event Type</mat-label>
+            <input type="text" maxlength="150" class="form-control"
+                placeholder="Please enter type" id="gstn" formControlName="calenderDateType">
+            <mat-error [dir]="langDir"
+                *ngIf="calendarForm.get('calenderDateType').touched && calendarForm.get('calenderDateType').errors?.required"
+                class="text-danger">
+                Please enter calender type
+            </mat-error>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <div class="form-group">
+            <mat-label>Event Remarks</mat-label>
+            <input type="text" maxlength="150" class="form-control"
+                placeholder="Please enter type" id="gstn" formControlName="calenderDateRemarks">
+            <mat-error [dir]="langDir"
+                *ngIf="calendarForm.get('calenderDateRemarks').touched && calendarForm.get('calenderDateRemarks').errors?.required"
+                class="text-danger">
+                Please enter calender remarks
+            </mat-error>
+        </div>
+    </div>
+
+    <div class="col-md-12 text-center">
+        <div class="example-action-buttons">
+            <button type="button" (click)="updateCalendar()" class="btn btn-success btn-md mx-3 px-3 py-2"><i
+                    class="fas fa-save"></i>
+                {{"UPDATE" | translate}}</button>
+            <button type="button" class="btn btn-danger btn-md mx-3 px-3 py-2"  (click)="onCancel()" ><i
+                    class="fas fa-times-circle"></i>
+                {{"CANCEL" | translate}}
+            </button>
+        </div>
+    </div>
+</div>
+</form>
